# mig_ahb_utility_stack

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  README.rst  domain-specific-terms.txt  gon.json  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  test-maus.json  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docs.yml  executables.yml  formatting.yml  integrationtests.yml  packaging_test.yml  python-publish.yml  release.yml  unittests.yml
dev_requirements/: requirements-build_executable.in  requirements-build_executable.txt  requirements-coverage.txt  requirements-docs.in  requirements-docs.txt  requirements-formatting.txt  requirements-integration_tests.in  requirements-integration_tests.txt  requirements-json_schemas.in  requirements-json_schemas.txt  requirements-linting.txt  requirements-test_packaging.in  requirements-test_packaging.txt  requirements-type_check.in  requirements-type_check.txt  requirements-unit_tests.in  requirements-unit_tests.txt
docs/: conf.py  index.rst
docs/api/: maus.models.rst  maus.reader.rst  maus.rst  modules.rst
docs/apidoc/: maus.maus.rst  maus.models.anwendungshandbuch.rst  maus.models.edifact_components.rst  maus.models.message_implementation_guide.rst  maus.models.rst  maus.reader.ahb_csv_reader.rst  maus.reader.rst  maus.rst
integration_tests/: README.md  helpers.py  test_11001_maus.py  test_anmeldung_maus.py  test_eog_maus.py  test_kuendigung_maus.py
json_schemas/: DeepAnwendungshandbuchSchema.json  README.md  generate_json_schemas.py
src/maus/: __init__.py  cli.py  deep_ahb_mig_joiner.py  division_helper.py  edifact.py  maus.py  maus_provider.py  mig_ahb_matching.py  navigation.py  transformation.py  utilmd.json
src/maus/models/: __init__.py  anwendungshandbuch.py  edifact_components.py  message_implementation_guide.py
src/maus/models/_internal/: __init__.py
src/maus/reader/: __init__.py  ahb_csv_reader.py  ahb_location_xml.py  etree_element_helpers.py  flat_ahb_reader.py  mig_ahb_name_helpers.py  mig_reader.py  mig_xml_reader.py  tree_to_sgh.py
tests/: conftest.py
tests/integration_tests/: README.md  helpers.py  test.xml  test_11001_maus.py  test_abmeldeanfrage_maus.py  test_abmeldung_maus.py  test_anmeldung_maus.py  test_beginn_msb_maus.py  test_ende_msb_maus.py  test_eog_maus.py  test_geraeteuebernahme_maus.py  test_kuendigung_maus.py  test_kuendigung_msb_maus.py  test_stammdatenaenderung_maus.py  test_submodule_setup.py
tests/unit_tests/: example_data_11042.py  serialization_test_helper.py  test_ahb.py  test_ahb_csv_reader.py  test_ahb_location_as_xml.py  test_edifact_components.py  test_edifact_enums.py  test_etree_element_helpers.py  test_integration_11042.py  test_integration_21035.py  test_integration_35001.py  test_maus.py  test_maus_provider.py  test_mig.py  test_mig_ahb_name_helpers.py  test_mig_xml_reader_mwe.py  test_mig_xml_reader_real_data.py  test_navgation.py  test_navigation.py  test_searching_in_models.py  test_transformation.py  test_tree_to_sgh.py
tests/unit_tests/ahbs/FV2204/IFTSTA/: 21035_deep.json
tests/unit_tests/ahbs/FV2204/UTILMD/: 11042_deep.json
tests/unit_tests/migs/FV2204/segment_group_hierarchies/: sgh_iftsta.json  sgh_reqote.json
tests/unit_tests/migs/FV2204/template_xmls/: reqote.xml  utilmd_1131.xml  utilmd_6411.xml  utilmd_7402.xml
tests/unit_tests/migs/FV2210/segment_group_hierarchies/: UTILTS1.1a.tree
tests/unit_tests/migs/FV2210/template_xmls/: utilmd_7037.xml  utilmd_7037_z02.xml  utilmd_7059.xml  utilmd_7143.xml
unit_tests/: README.md  test_ahb.py  test_ahb_csv_reader.py  test_edifact_components.py  test_etree_element_helpers.py  test_integration_11042.py  test_integration_21035.py  test_integration_35001.py  test_maus.py  test_maus_provider.py  test_mig.py  test_mig_xml_reader_mwe.py  test_mig_xml_reader_real_data.py  test_searching_in_models.py
unit_tests/ahbs/FV2204/REQOTE/: 35001_deep.json  35001_maus.json
unit_tests/ahbs/FV2204/UTILMD/: 11042_maus.json
unit_tests/migs/FV2204/template_xmls/: utilmd_3055.xml
unittests/: serialization_test_helper.py  test_ahb.py  test_ahb_csv_reader.py  test_division_helper.py  test_edifact_components.py  test_edifact_enums.py  test_etree_element_helpers.py  test_integration_11042.py  test_integration_21035.py  test_integration_35001.py  test_maus.py  test_mig.py  test_mig_ahb_name_helpers.py  test_mig_xml_reader.py  test_mig_xml_reader_mwe.py  test_mig_xml_reader_real_data.py  test_myclass.py
unittests/ahbs/FV2204/IFTSTA/: 21035.csv  21035_deep.json  21035_maus.json
unittests/ahbs/FV2204/REQOTE/: 35001.csv  35001_deep.json  35001_maus.json
unittests/ahbs/FV2204/UTILMD/: 11042.csv  11042_deep.json  11042_maus.json
unittests/migs/FV2204/: sgh_mscons.json  sgh_utilmd.json
unittests/migs/FV2204/segment_group_hierarchies/: README.md
unittests/migs/FV2204/template_xmls/: README.md  mscons_1154.xml  reqote.xml  utilmd_1154.xml  utilmd_2379.xml  utilmd_2380.xml  utilmd_3225.xml  utilmd_9013.xml
