[metadata]
author = Hochfrequenz Unternehmensberatung GmbH
author_email = info@hochfrequenz.de
description = Python Library that consolidates Anwendungshandbücher (AHB) and Message Implementation Guides (MIG).
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/Hochfrequenz/mig_ahb_utility_stack
project_urls =
    Documentation = https://maus.readthedocs.io/en/latest/
    Code = https://github.com/Hochfrequenz/mig_ahb_utility_stack
    Bug tracker = https://github.com/Hochfrequenz/mig_ahb_utility_stack/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
license = mit
platforms = any

[options]
package_dir =
    = src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires =
    attrs>=21.4.0
    marshmallow>=3.18.0
    more_itertools

[options.extras_require]
# dependencies for the maus[xml] package with optional lxml dependency
xml = lxml>=4.9.2
# extras_require syntax, see: https://stackoverflow.com/a/49820357/10009545

[options.packages.find]
where = src
exclude =
    unittests

[options.package_data]
* = py.typed
